Changelog
=========

2019.3.0 (unreleased)
---------------------

- Update documentation for SaaS deployment update. [njohner]
- Extend task API serialization with responses data. [phgross]


2019.2.2 (2019-05-27)
---------------------

- Fix revoke_permission field and validation in the fowarding forms. [phgross]
- Hide byline for the teams. [phgross]
- Cleanup/fix oneoffix upgradesteps and make dicstorage upgrades more failsafe. [phgross]
- Add french translation for spv documentation. [andresoberhaensli, njohner]
- Add french translation for task documentation. [andresoberhaensli, njohner]
- Allow viewing closed meeting when meeting dossier is closed. [njohner]


2019.2.1 (2019-05-21)
---------------------

- Show filters also on no contents page in document listings. [phgross]
- Make subject column non-sortable in storred dictstorage settings. [phgross]


2019.2.0 (2019-05-16)
---------------------

- Use the new split off registry configuration in the Oneoffixx API client. [Rotonen]
- Fix parent-link styling in the userdetails view. [phgross]
- Use smaller or equal in time window checking for nightly runner. [njohner]
- Nightly jobs: Also log exceptions to logfile, not just Sentry. [lgraf]
- Set 90px as a minimum instead of fixed height for description-like widgets. [lgraf]
- Fix resolving of multi-adminunit tasks. [phgross]
- Fix the setting of the content-type for Oneoffixx templates. [Rotonen]
- Concistently use "déroulement standard" for tasktemplates in French. [njohner]
- Update and add missing French translations. [njohner, andresoberhaensli]
- Update favorite-icon after cancel a document checkout. [phgross]
- Fix has_children indexer which lead to duplicate brains. [njohner, phgross]
- Add a configurable scope for Oneoffixx OAuth2 grant requests. [Rotonen]
- Trash: Update and reindex modification date when trashing documents. [lgraf]
- Respect tabbedview settings when generating a document excel export. [phgross]